test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/user_non_unix_group_runas.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
expression: stdout
---
Matching Defaults entries for root on container:
    !fqdn, !lecture, !mailerpath

User root may run the following commands on container:

Sudoers entry:
    RunAsUsers: %:root
    Commands:
	ALL
